--- a/regression/ML.ipynb
+++ b/regression/ML.ipynb
@@ -533,7 +533,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use previously created data (here in ./data2) to get the 3 best configurations in order to have a more precise information, but taking longer to compute"
+    "Use previously created data (here in ./dataTest) to get the 3 best configurations in order to have a more precise information, but taking longer to compute"
    ]
   },
   {
